--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@ spring.security.oauth2.client.registration.google.client-secret=GOCSPX-MeWbtx4G3
 
 #Paypal config
 paypal.mode=sandbox
-paypal.client.app=xxx-yourcode
-paypal.client.secret=xxx-yourcode
+paypal.client.app=sb-4tzdv15708060@business.example.com
+paypal.client.secret=AUabMI2TgAZ8Ier2Jg-rRTfVvSPmdsqEHdL9mHQ6P6ejEsG2K8uIPSE-IEiovIkfrikkfcrSpofj7RKf
