--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,23 @@
 	<artifactId>EStore</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
-	<name>BevisShop</name>
+	<name>EStore</name>
 	<description>Project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		<!-- Paypal -->
+		<!-- <dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>rest-api-sdk</artifactId>
+			<version>1.4.2</version>
+		</dependency> -->
 		<!-- Oauth2 -->
-	 	<dependency>
-      		<groupId>org.springframework.boot</groupId>
-      		<artifactId>spring-boot-starter-oauth2-client</artifactId>
-    	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 		<!-- JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
