--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.jpa.hibernate.ddl-auto=none
 #Mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=truongthanhbinh572000@gmail.com
-spring.mail.password=0901850057
+spring.mail.username=trthanhbinh5720@gmail.com
+spring.mail.password=ccjqlveaxjokshnd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
